dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  labels:
    apps: orderlabel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderlabel
  template:
    metadata:
      labels:
        app: orderlabel
    spec:
      containers:
      - name: orderlabel
        image: nginx:latest
        ports:
        - containerPort: 80
