dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: orderlabel

  ports:
    - protocol: TCP
    - name: http
      port: 80
      targetPort: 80
