dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: orderlabel
spec:
  defaultBackend:
    service:
      name: orderlabel
      port:
        number: 80
  rules:
  - host: ingress.local
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name:  orderlabel
            port: 
              number: 80
